--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Transporte Escolar</title>
 
+<style>
+body {
+  font-family: Arial, sans-serif;
+  background: #fff8e1;
+  padding: 20px;
+}
+.card {
+  background: white;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+button {
+  background: #f4b400;
+  color: white;
+  border: none;
+  padding: 10px;
+  border-radius: 8px;
+  width: 100%;
+  margin-top: 10px;
+}
+input, select {
+  width: 100%;
+  padding: 8px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+h2 {
+  color: #c49000;
+}
+</style>
+</head>
+<body>
+
+<h2>🚍 Transporte Escolar</h2>
+
+<div class="card">
+<h3>Sistema Online</h3>
+<p>Seu aplicativo está funcionando 🎉</p>
+<p>Chave PIX:</p>
+<strong>yaamimlelek@gmail.com</strong>
+<p>Mensalidade: R$ 20,00</p>
+</div>
+
+</body>
+</html>
