--- a/index.html
+++ b/index.html
@@ -1,53 +1,95 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Transporte Escolar</title>
+  <meta charset="UTF-8">
+  <title>Transporte Escolar</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-  font-family: Arial, sans-serif;
-  background: #fff8e1;
-  padding: 20px;
-}
-.card {
-  background: white;
-  padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 15px;
-}
-button {
-  background: #f4b400;
-  color: white;
-  border: none;
-  padding: 10px;
-  border-radius: 8px;
-  width: 100%;
-  margin-top: 10px;
-}
-input, select {
-  width: 100%;
-  padding: 8px;
-  margin-top: 5px;
-  margin-bottom: 10px;
-}
-h2 {
-  color: #c49000;
-}
-</style>
+  <style>
+    body {
+      font-family: Arial;
+      background: #fff8e1;
+      margin: 0;
+      padding: 20px;
+    }
+    h1 { text-align: center; color: #c49000; }
+    input, button {
+      padding: 10px;
+      margin: 5px 0;
+      width: 100%;
+      border-radius: 8px;
+      border: 1px solid #ddd;
+    }
+    button {
+      background: #f4b400;
+      color: white;
+      border: none;
+    }
+    .card {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      margin-top: 15px;
+    }
+  </style>
 </head>
 <body>
 
-<h2>🚍 Transporte Escolar</h2>
+<h1>🚍 Transporte Escolar</h1>
 
-<div class="card">
-<h3>Sistema Online</h3>
-<p>Seu aplicativo está funcionando 🎉</p>
-<p>Chave PIX:</p>
-<strong>yaamimlelek@gmail.com</strong>
-<p>Mensalidade: R$ 20,00</p>
+<div id="login">
+  <input type="text" id="cpf" placeholder="Digite seu CPF">
+  <button onclick="login()">Entrar</button>
 </div>
+
+<div id="aluno" style="display:none">
+  <div class="card">
+    <h3>Área do Aluno</h3>
+    <p>Status: <span id="status"></span></p>
+    <p>Valor mensal: R$ 20,00</p>
+    <button onclick="whatsapp()">Enviar comprovante via WhatsApp</button>
+  </div>
+</div>
+
+<script type="module">
+import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+
+const firebaseConfig = {
+  apiKey: "AIzaSyCRVwlFbF9FmrgdidYa89tFRd0g3OnMITk",
+  authDomain: "transporte-escolar-3299a.firebaseapp.com",
+  projectId: "transporte-escolar-3299a",
+  storageBucket: "transporte-escolar-3299a.firebasestorage.app",
+  messagingSenderId: "662041372417",
+  appId: "1:662041372417:web:7f60824b64caa40c719d00"
+};
+
+const app = initializeApp(firebaseConfig);
+const db = getFirestore(app);
+
+window.login = async function() {
+  const cpf = document.getElementById("cpf").value;
+
+  const docRef = doc(db, "alunos", cpf);
+  const docSnap = await getDoc(docRef);
+
+  if (docSnap.exists()) {
+    const dados = docSnap.data();
+    document.getElementById("login").style.display = "none";
+    document.getElementById("aluno").style.display = "block";
+    document.getElementById("status").innerText = dados.status;
+  } else {
+    alert("Aluno não encontrado");
+  }
+}
+
+window.whatsapp = function() {
+  const numero = "5563992312407";
+  const texto = "Olá, estou enviando meu comprovante de pagamento.";
+  window.open(`https://wa.me/${numero}?text=${encodeURIComponent(texto)}`);
+}
+
+</script>
 
 </body>
 </html>
